fixed all spacing issues in publications. switched from ul.no-bullet list to ol which has numbers. reformatted the ol numbers to be bracketed and removed bracket reference numbers that were part of the text before. changed button0 left margin to be 20px to match the padding on the reference text, this also fixed an issue with the padding when the window was resized, since then the padding would jump from 37px to 300px, which should make this look normal on mobile. added missing <group> tags that was causing some elements like @misc to not be padded with space.

--- a/_sass/syntax.scss
+++ b/_sass/syntax.scss
@@ -219,7 +219,7 @@
   font-size: 7px;
   font-weight: bold;
   // margin: 2px 1px;
-  margin-left: 300px;
+  margin-left: 20px;
   cursor: pointer;
   border-radius: 5px;
 }
@@ -339,7 +339,7 @@
       font-size: 10px;
       font-weight: bold;
       // margin: 2px 1px;
-      margin-left: 37px;
+      margin-left: 20px;
       cursor: pointer;
       border-radius: 5px;
   }
