--- a/csl-blocks.css
+++ b/csl-blocks.css
@@ -45,6 +45,7 @@ ol {
     list-style-type: none;
     padding: 0px;
     margin: 0px;
+    content: "[" counter(item) "]";
 }
 
 
